--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -1,149 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F6F8FC"
+    android:background="#F0F3F8"
     tools:context=".PemesananActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="16dp">
 
-            <ImageButton
-                android:id="@+id/btnBack"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:contentDescription="Kembali"
-                android:src="@drawable/arrow_back" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnBack"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/bg_circle_white"
+                    android:src="@drawable/arrow_back"
+                    android:scaleType="centerInside"
+                    android:elevation="2dp"
+                    app:tint="#4e4e4e"
+                    android:contentDescription="Kembali" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Detail Pesanan"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textColor="#4e4e4e"
+                    android:textSize="18sp" />
+
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="1dp" />
+            </LinearLayout>
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Detail Pesanan"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="24dp"
-                android:layout_height="1dp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Nama"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/etNama"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Nama Lengkap"
-            android:inputType="textPersonName"
-            android:padding="12dp"
-            android:textColorHint="#9E9E9E"
-            android:textSize="14sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Nomor Telepon"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/etTelepon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="+62 123 123 123"
-            android:inputType="phone"
-            android:padding="12dp"
-            android:textColorHint="#9E9E9E"
-            android:textSize="14sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Tanggal Pemesanan"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
+                android:layout_marginBottom="4dp"
+                android:text="Nama"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="#4e4e4e"
+                android:textSize="14sp" />
 
             <EditText
-                android:id="@+id/etTanggal"
-                android:layout_width="0dp"
+                android:id="@+id/etNama"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_bg"
-                android:focusable="false"
-                android:hint="DD/MM/YYYY"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/edittext_background"
+                android:hint="Nama Lengkap"
+                android:inputType="textPersonName"
                 android:padding="12dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="#4e4e4e"
                 android:textColorHint="#9E9E9E"
                 android:textSize="14sp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Nomor Telepon"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="#4e4e4e"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/etTelepon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/edittext_background"
+                android:hint="+62 123 123 123"
+                android:inputType="phone"
+                android:padding="12dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="#4e4e4e"
+                android:textColorHint="#9E9E9E"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Tanggal Pemesanan"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="#4e4e4e"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/etTanggal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_background"
+                    android:focusable="false"
+                    android:hint="DD/MM/YYYY"
+                    android:padding="12dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#4e4e4e"
+                    android:textColorHint="#9E9E9E"
+                    android:textSize="14sp" />
+
+                <ImageButton
+                    android:id="@+id/btnCalendar"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="8dp"
+                    android:background="@drawable/edittext_background"
+                    android:src="@drawable/ic_calender1"
+                    android:contentDescription="Pilih tanggal"
+                    android:scaleType="center"
+                    android:padding="12dp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Jumlah Pesanan"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="#4e4e4e"
+                android:textSize="14sp" />
+
             <Button
-                android:id="@+id/btnCalendar"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/ic_calender1"
-                android:contentDescription="Pilih tanggal"
-                android:scaleType="center" />
+                android:id="@+id/btnJumlah"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@color/common_google_signin_btn_tint"
+                android:gravity="start|center_vertical"
+                android:minHeight="48dp"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:text="00 Dewasa, 00 Anak"
+                android:textAllCaps="false"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="#9E9E9E"
+                android:textSize="14sp"
+                app:cornerRadius="8dp" />
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Jumlah Pesanan"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/btnJumlah"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:background="@color/common_google_signin_btn_tint"
-            android:gravity="start|center_vertical"
-            android:minHeight="48dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:text="00 Dewasa, 00 Anak"
-            android:textAllCaps="false"
-            android:textColor="#9E9E9E"
-            android:textSize="14sp" />
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -154,89 +179,91 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="83dp"
             android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:background="@android:color/white">
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
 
-            <!-- Harga Dewasa -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="4dp"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="4dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvLabelDewasa"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Dewasa 1 x 10.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Dewasa 1 x Rp 10.000"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/tvHargaDewasa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Rp 10.000"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
             </LinearLayout>
 
-            <!-- Harga Anak -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginTop="4dp"
                 android:gravity="center_vertical"
-                android:layout_marginTop="4dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvLabelAnak"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Anak 0 x 7.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Anak 0 x Rp 7.000"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/tvHargaAnak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Rp 0"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
             </LinearLayout>
 
-            <!-- Asuransi -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginTop="4dp"
                 android:gravity="center_vertical"
-                android:layout_marginTop="4dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvLabelAsuransi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Asuransi 2 x 1.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Asuransi 2 x Rp 1.000"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/tvAsuransi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2.000"
-                    android:textSize="14sp"
-                    android:textColor="#555555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Rp 2.000"
+                    android:textColor="#4e4e4e"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -259,16 +286,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Total"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="#000000" />
+                android:textColor="#4e4e4e" />
 
             <TextView
                 android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp 10.000"
-                android:textStyle="bold"
+                android:text="Rp 12.000"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
                 android:textColor="#03B6A7" />
         </LinearLayout>
@@ -282,9 +309,10 @@
             android:textColor="#FFFFFF"
             android:backgroundTint="#03B6A7"
             android:padding="14dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/poppins_semibold"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
-            android:layout_marginTop="4dp" />
+            android:layout_marginTop="4dp"
+            app:cornerRadius="8dp" />
     </LinearLayout>
 </LinearLayout>
