--- a/app/src/main/res/layout/activity_rorokuning.xml
+++ b/app/src/main/res/layout/activity_rorokuning.xml
@@ -1,151 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F2F2">
+    android:background="#F0F3F8"
+    tools:context=".DetailWisataActivity">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/btnPesan"
-        android:layout_marginTop="0dp">
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnPesan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Celah Atas -->
             <View
                 android:layout_width="match_parent"
-                android:layout_height="69dp" />
+                android:layout_height="72dp" />
 
-            <!-- Header Gambar -->
-            <ImageView
-                android:id="@+id/imgHeader"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="190dp"
                 android:layout_marginHorizontal="16dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/default_wisata"
-                android:background="@drawable/image_rounded"
-                android:clipToOutline="true" />
+                android:layout_marginBottom="16dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="4dp">
 
-            <!-- CARD DETAIL -->
+                <ImageView
+                    android:id="@+id/imgHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/default_wisata"
+                    android:contentDescription="Foto Air Terjun Roro Kuning" />
+            </androidx.cardview.widget.CardView>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/bg_card"
                 android:elevation="4dp">
 
-                <!-- Nama Wisata -->
                 <TextView
                     android:id="@+id/tvNamaWisata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Air Terjun Roro Kuning"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins_bold"
                     android:textSize="18sp"
-                    android:textColor="#000" />
+                    android:textColor="#4e4e4e" />
 
-                <!-- Lokasi -->
                 <TextView
                     android:id="@+id/tvLokasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="Nglaranggan, Bajulan, Kec. Loceret, Kabupaten Nganjuk, Jawa Timur 64471"
-                    android:textColor="#555" />
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textColor="#818181"
+                    android:textSize="12sp" />
 
-                <!-- Deskripsi Title -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Deskripsi"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins_bold"
                     android:textSize="16sp"
-                    android:textColor="#000" />
+                    android:textColor="#4e4e4e" />
 
-                <!-- Deskripsi -->
                 <TextView
                     android:id="@+id/tvDeskripsi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="Air terjun Roro Kuning merupakan salah satu destinasi wisata alam di kaki Gunung Wilis. Dikelilingi pepohonan rindang dan udara sejuk, tempat ini cocok untuk wisata keluarga maupun pecinta alam."
-                    android:textColor="#555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#4e4e4e"
+                    android:textSize="14sp" />
 
-                <!-- Tiket Masuk Title -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Tiket Masuk"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="16sp"
+                    android:textColor="#4e4e4e" />
 
-                <!-- Tiket Masuk -->
                 <TextView
                     android:id="@+id/tvHargaTiket"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="Dewasa : 8000\nAnak-anak : 6000"
-                    android:textColor="#555" />
+                    android:text="Dewasa : 8.000\nAnak-anak : 6.000"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#4e4e4e"
+                    android:textSize="14sp" />
 
-                <!-- Fasilitas Title -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Fasilitas"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="16sp"
+                    android:textColor="#4e4e4e" />
 
-                <!-- Fasilitas -->
                 <TextView
                     android:id="@+id/tvFasilitas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="Warung Makan, Parkir, Toilet, Gazebo, Area bermain anak, Pendopo, Mushola, dan Kolam Renang"
-                    android:textColor="#555" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="#4e4e4e"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-    <!-- Tombol Pesan -->
     <Button
         android:id="@+id/btnPesan"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="55dp"
         android:text="Pesan sekarang"
-        android:layout_alignParentBottom="true"
         android:textAllCaps="false"
-        android:textColor="#FFF"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:backgroundTint="#0BB5A7"
-        android:layout_margin="16dp" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="16dp"
+        app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Tombol Back paling atas supaya bisa diklik -->
     <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_circle_white"
         android:src="@drawable/arrow_back"
         android:scaleType="centerInside"
-        app:tint="#009688"
+        app:tint="#4e4e4e"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:clickable="true"
-        android:focusable="true" />
-
-</RelativeLayout>
+        android:focusable="true"
+        android:elevation="10dp"
+        android:contentDescription="Tombol Kembali"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
